Update entrypoint in the README.md
Signed-off-by: Lachlan Roberts <lachlan@webtide.com>